<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FitPet</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Лента</string>
    <string name="title_notifications">Забота</string>
    <string name="title_profile">Профиль</string>
    <string name="home_fragment_label">Welcome to FitPet!</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="save">Save</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="dont_have_account_register">Нет аккаунта? Регистрация</string>
    <string name="your_pets">Ваши питомцы</string>
    <string name="upcoming_plans">Предстоящие планы</string>
    <string name="status_check">Проверка статуса</string>
    <string name="no_plans">Планов нет</string>
    <string name="no_checks">Нет проверок</string>
    <string name="pet_name">Имя питомца</string>
    <string name="pet_gender">Пол питомца</string>
    <string name="pet_age">Возраст питомца</string>
    <string name="pet_weight">Вес питомца</string>
    <string name="pet_avatar_url">Аватар питомца</string>
    <string name="pet_species">Вид питомца</string>
    <string name="pet_breed">Порода питомца</string>
    <string name="device_name">Наименование устройства</string>
    <string name="device_type">Тип устройства</string>
    <string name="device_pet_id">ID устройства</string>
    <string name="connection_status">Статус соединения</string>
    <string name="add_pet">Добавить питомца</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="add_device">Добавить устройство</string>
    <string name="feed_title">Название статьи</string>
</resources>
