<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_name" />

    <EditText
        android:id="@+id/device_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_type" />

    <EditText
        android:id="@+id/device_pet_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_pet_id"
        android:inputType="number" />

    <Switch
        android:id="@+id/device_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status" />
</LinearLayout>
